change responsive lg to md from footer section

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
     <section id="footers">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-2">
-                    <h5 class="text-white">WHATSAPP</h5>
+                <div class="col-md-2">
+                    <h5 class=" whatsapp text-white">WHATSAPP</h5>
                     <div class="links-whatsapp-footers mt-5">
                         <a href="" class="text-white text-decoration-none d-block">Features</a>
                         <a href="" class="text-white text-decoration-none d-block mt-3">Security</a>
@@ -149,8 +149,8 @@
                         <a href="" class="text-white text-decoration-none d-block mt-3">Privacy</a>
                     </div>
                 </div>
-                <div class="col-lg-2">
-                    <h5 class="text-white">COMPANNY</h5>
+                <div class="col-md-2">
+                    <h5 class="companny text-white">COMPANNY</h5>
                     <div class="links-companny-footers mt-5">
                         <a href="" class="text-white text-decoration-none d-block">About</a>
                         <a href="" class="text-white text-decoration-none d-block mt-3">Carrers</a>
@@ -160,16 +160,16 @@
                         <a href="" class="text-white text-decoration-none d-block mt-3">WhatsApp Stories</a>
                     </div>
                 </div>
-                <div class="col-lg-2">
-                    <h5 class="text-white">DOWNLOAD</h5>
+                <div class="col-md-2">
+                    <h5 class="download text-white">DOWNLOAD</h5>
                     <div class="links-download-footers mt-5">
                         <a href="" class="text-white text-decoration-none d-block">Mac/PC</a>
                         <a href="" class="text-white text-decoration-none d-block mt-3">Android</a>
                         <a href="" class="text-white text-decoration-none d-block mt-3">iPhone</a>
                     </div>
                 </div>
-                <div class="col-lg-2">
-                    <h5 class="text-white">HELP</h5>
+                <div class="col-md-2">
+                    <h5 class="help text-white">HELP</h5>
                     <div class="links-help-footers mt-5">
                         <a href="" class="text-white text-decoration-none d-block">Help Center</a>
                         <a href="" class="text-white text-decoration-none d-block mt-3">Twitter</a>
@@ -187,12 +187,12 @@
     <section id="copyright">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <p class="text-white mt-3">2022 WhatsApp LLC
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <a href="" class="text-decoration-none">
-                        <p class="text-white text-end mt-3"> Privacy & Terms <span class="arrow-right fs-6"><i
+                        <p class="text-white mt-3"> Privacy & Terms <span class="arrow-right fs-6"><i
                                     class="fas fa-chevron-right ms-1"></i></span></p>
                     </a>
                 </div>
