--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand fw-bold fs-3" href="#">
-                <img src="Assets/icon-wa.png" alt="" width="35px" class="d-inline-block align-text-top">
+                <img src="Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp" width="35px" class="d-inline-block align-text-top">
                 Whatsapp
             </a>
             <button class="navbar-toggler">
