--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand fw-bold fs-3" href="#">
+            <a class="navbar-brand fw-bold text-white" href="#">
                 <img src="Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp" width="35px" class="d-inline-block align-text-top">
                 Whatsapp
             </a>
@@ -40,11 +40,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
-                    <a class="nav-link me-5" href="#">WHATSAPP WEB</a>
-                    <a class="nav-link me-5" href="#">FEATURES</a>
-                    <a class="nav-link me-5" href="#">DOWNLOAD</a>
-                    <a class="nav-link me-5" href="#">SECURITY</a>
-                    <a class="nav-link" href="#">HELP CENTER</a>
+                    <a class="nav-link me-5 text-white" href="">WHATSAPP WEB</a>
+                    <a class="nav-link me-5 text-white" href="">FEATURES</a>
+                    <a class="nav-link me-5 text-white" href="">DOWNLOAD</a>
+                    <a class="nav-link me-5 text-white" href="">SECURITY</a>
+                    <a class="nav-link text-white" href="">HELP CENTER</a>
                 </div>
                 <div class="leanguage">
                     <a class="text-decoration-none" href="#"> <span class="globe me-1"><i
