create message notification

--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
     </nav>
     <!-- END OF NAVBAR -->
 
+    <!-- MESSAGE -->
+    <section id="message">
+        <div class="container">
+            <div class="message-from-me shadow p-3 mb-5 d-flex gap-3">
+                <div class="photo"></div>
+                <div class="text mt-auto pe-3">
+                    <h6 class="fw-bold">Alluwiyadi Akbar </h6>
+                    <p>Hi, if you want to contact me <a href="">Click here</a></p>
+                </div>
+                <div class="close">
+                    <i class="fas fa-times"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END OF MESSAGE -->
 
     <!-- HEADER -->
     <section id="header">
@@ -122,7 +138,6 @@
     </section>
     <!-- END OF CONTENTS -->
 
-
     <!-- EXPLORE FEATURES -->
     <section id="explore">
         <div class="container">
@@ -132,7 +147,6 @@
         </div>
     </section>
     <!-- END OF EXPLORE FEATURES -->
-
 
     <!-- FOOTERS -->
     <section id="footers">
@@ -181,7 +195,6 @@
         </div>
     </section>
     <!-- AKHIR FOOTERS -->
-
 
     <!-- COPYRIGHT -->
     <section id="copyright">
