remove padding on security

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             Business API.</a> </p>
                     <img src="Assets/phone-2.png" alt="phone-2" width="100%" class="mt-5">
                 </div>
-                <div class="security col-lg-5 p-5">
+                <div class="security col-lg-5">
                     <div class="circle mx-auto mt-5"></div>
                     <p class="end text-center fw-bold">END-TO-END ENCRYPTION</p>
                     <h1 class="text-center fw-bold">Security by Default</h1>
