add link to WhatsApp Security

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
-    <title>Whatsapp Website</title>
+    <title>WhatsApp Website</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <div class="container">
             <a class="navbar-brand fw-bold text-white" href="#">
                 <img src="Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp" width="35px" class="d-inline-block align-text-top">
-                Whatsapp
+                WhatsApp
             </a>
             <button class="navbar-toggler">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#fff" class="bi bi-list"
@@ -43,7 +43,7 @@
                     <a class="nav-link me-5 text-white" href="">WHATSAPP WEB</a>
                     <a class="nav-link me-5 text-white" href="">FEATURES</a>
                     <a class="nav-link me-5 text-white" href="">DOWNLOAD</a>
-                    <a class="nav-link me-5 text-white" href="">SECURITY</a>
+                    <a class="nav-link me-5 text-white" href="Security/index.html">SECURITY</a>
                     <a class="nav-link text-white" href="">HELP CENTER</a>
                 </div>
                 <div class="leanguage">
