create security whatsApp section

--- a/Security/index.html
+++ b/Security/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
-    <title>Security</title>
+    <title>WhatsApp Security</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             <a class="navbar-brand fw-bold text-white" href="../index.html">
                 <img src="../Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp" width="35px"
                     class="d-inline-block align-text-top">
-                Whatsapp
+                WhatsApp
             </a>
             <button class="navbar-toggler">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#fff" class="bi bi-list"
@@ -57,6 +57,173 @@
         </div>
     </nav>
     <!-- END OF NAVBAR -->
+
+    <!-- HEADER -->
+    <section id="header">
+        <div class="background-header"></div>
+    </section>
+    <!-- END OF HEADER -->
+
+    <!-- CONTENT -->
+    <section id="content">
+        <div class="container">
+            <h1 class="fw-bold mt-4">WhatsApp Security</h1>
+            <h3 class=" mt-5">Privacy and Security is in our DNA</h3>
+            <p class="mt-4">From day one, we built WhatsApp to help you stay in touch with friends, share vital
+                information during <a href="https://www.ndtv.com/tamil-nadu-news/chennai-floods-ndrf-uses-social-media-to-reach-out-to-people-1251104" target="_blank">natural disasters,</a> reconnect with <a href="https://time.com/4272666/refugees-stories-whatsapp/" target="_blank">separated families,</a>
+                or seek a <a href="https://www.buzzfeed.com/rossalynwarren/a-syrian-refugee-used-whatsapp-to-share-his-journey-through" target="_blank">better life.</a> Some of your most personal moments are shared with WhatsApp, which
+                is why we built end-to-end encryption into our app. When end-to-end encrypted, your messages, photos,
+                videos, voice messages, documents, and calls are secured from falling into the wrong hands.</p>
+
+            <div class="circle mt-5 mx-auto"></div>
+
+            <h3 class="mt-5">Personal Messaging</h3>
+            <p class="mt-4">WhatsApp's end-to-end encryption is used when you message another person using WhatsApp
+                Messenger. End-to-end encryption ensures only you and the person you're communicating with can read or
+                listen to what is sent, and nobody in between, not even WhatsApp. This is because with end-to-end
+                encryption, your messages are secured with a lock, and only the recipient and you have the special key
+                needed to unlock and read them. All of this happens automatically: no need to turn on settings or set up
+                special secret chats to secure your messages.</p>
+
+            <h3 class="mt-5">Business Messaging</h3>
+            <p class="mt-4">Every WhatsApp message is protected by the same Signal encryption protocol that secures
+                messages before
+                they leave your device. When you message a WhatsApp business account, your message is delivered securely
+                to the destination chosen by the business.
+
+                WhatsApp considers chats with businesses that use the WhatsApp Business app or manage and store customer
+                messages themselves to be end-to-end encrypted. Once the message is received, it will be subject to the
+                business’s own privacy practices. The business may designate a number of employees, or even other
+                vendors, to process and respond to the message.
+
+                Some businesses1 will be able to choose WhatsApp’s parent company, Facebook, to securely store messages
+                and respond to customers. You can always contact that business to learn more about its privacy
+                practices.
+            </p>
+
+            <h3 class="mt-5">Payments</h3>
+            <p class="mt-4">Payments on WhatsApp, which are available in select countries, enable transfers between
+                accounts at financial institutions. Card and bank numbers are stored encrypted and in a highly-secured
+                network. However, because financial institutions can’t process transactions without receiving
+                information related to these payments, these payments aren’t end-to-end encrypted.</p>
+
+            <h3 class="mt-5">You’re in control</h3>
+            <p class="mt-4">WhatsApp wants to make sure you know what’s happening with your messages. If you don’t
+                want to receive messages from a person or business, you can always block them directly from the chat or
+                delete them from your contact list. We want to make sure you understand how your messages are being
+                handled and have the options you need to make the right decisions for you.</p>
+
+            <div class="row justify-content-between">
+                <div class="col-md-5">
+                    <div class="icon-speak mt-5">
+                        <img src="../Assets/icon-speak-freely.png" alt="icon-speak-freely" width="100%">
+                    </div>
+                    <h5 class="mt-5 fw-bold">Speak Freely</h5>
+                    <p class="mt-3">WhatsApp Calling lets you speak privately to your friends and family, even if
+                        they're in another country.</p>
+                </div>
+                <div class="col-md-5">
+                    <div class="icon-message mt-5">
+                        <img src="../Assets/icon-message-that-stay-with-you.png" alt="icon-message-thath-stay-with-you" width="100%">
+                    </div>
+                    <h5 class="mt-5 fw-bold">Messages that Stay with You</h5>
+                    <p class="mt-3">End-to-end encrypted messages are stored on your device and not WhatsApp servers
+                        after they are delivered.</p>
+                </div>
+            </div>
+
+            <div class="row justify-content-between">
+                <div class="col-md-5">
+                    <div class="icon-padlock mt-5">
+                        <img src="../Assets/icon-see-for-yourself.png" alt="icon-see-for-yourself" width="100%">
+                    </div>
+                    <h5 class="mt-5 fw-bold">See for Yourself</h5>
+                    <p class="mt-3">WhatsApp lets you check whether the calls you make and messages you send are
+                        end-to-end encrypted. Simply look for the indicator directly in the chat or in contact info or
+                        business info.</p>
+                </div>
+                <div class="col-md-5">
+                    <div class="icon-get-details mt-5">
+                        <img src="../Assets/icon-get-the-details.png" alt="icon-get-the-details" width="100%">
+                    </div>
+                    <h5 class="mt-5 fw-bold">Get the Details</h5>
+                    <p class="mt-3">Read an <a href="">in-depth technical explanation</a> of WhatsApp's end-to-end
+                        encryption,
+                        developed in collaboration with Open Whisper Systems.
+                        Check Security Advisories for regular security updates.</p>
+                </div>
+            </div>
+
+            <p class="in mt-5">1 In 2022.</p>
+        </div>
+    </section>
+    <!-- END OF CONTENT -->
+
+    <!-- FOOTERS -->
+    <section id="footers">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-2">
+                    <h5 class=" whatsapp text-white">WHATSAPP</h5>
+                    <div class="links-whatsapp-footers mt-5">
+                        <a href="" class="text-white text-decoration-none d-block">Features</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Security</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Download</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">WhatsApp Web</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Bussiness</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Privacy</a>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <h5 class="companny text-white">COMPANNY</h5>
+                    <div class="links-companny-footers mt-5">
+                        <a href="" class="text-white text-decoration-none d-block">About</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Carrers</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Brand Center</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Get in touch</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Blog</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">WhatsApp Stories</a>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <h5 class="download text-white">DOWNLOAD</h5>
+                    <div class="links-download-footers mt-5">
+                        <a href="" class="text-white text-decoration-none d-block">Mac/PC</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Android</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">iPhone</a>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <h5 class="help text-white">HELP</h5>
+                    <div class="links-help-footers mt-5">
+                        <a href="" class="text-white text-decoration-none d-block">Help Center</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Twitter</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Facebook</a>
+                        <a href="" class="text-white text-decoration-none d-block mt-3">Coronavirus</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- AKHIR FOOTERS -->
+
+    <!-- COPYRIGHT -->
+    <section id="copyright">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <p class="text-white mt-3">2022 WhatsApp LLC
+                </div>
+                <div class="col-md-4">
+                    <a href="" class="text-decoration-none">
+                        <p class="text-white mt-3"> Privacy & Terms <span class="arrow-right fs-6"><i
+                                    class="fas fa-chevron-right ms-1"></i></span></p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END OF COPYRIGHT -->
 
     <!-- MESSAGE -->
     <section id="message">
