modified on navlink security

--- a/Security/index.html
+++ b/Security/index.html
@@ -42,9 +42,9 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
                     <a class="nav-link me-5 text-white" href="">WHATSAPP WEB</a>
-                    <a class="nav-link me-5 text-white" href="">FEATURES</a>
+                    <a class="nav-link me-5 text-white" href="../Features/index.html">FEATURES</a>
                     <a class="nav-link me-5 text-white" href="">DOWNLOAD</a>
-                    <a class="nav-link me-5 text-white" href="">SECURITY</a>
+                    <a class="nav-link me-5 text-white" href="#">SECURITY</a>
                     <a class="nav-link text-white" href="">HELP CENTER</a>
                 </div>
                 <div class="leanguage">
