add href on button explore

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
                     <a class="nav-link me-5 text-white" href="">WHATSAPP WEB</a>
-                    <a class="nav-link me-5 text-white" href="">FEATURES</a>
+                    <a class="nav-link me-5 text-white" href="Features/index.html">FEATURES</a>
                     <a class="nav-link me-5 text-white" href="">DOWNLOAD</a>
                     <a class="nav-link me-5 text-white" href="Security/index.html">SECURITY</a>
                     <a class="nav-link text-white" href="">HELP CENTER</a>
@@ -142,7 +142,7 @@
     <section id="explore">
         <div class="container">
             <div class="button-explore text-center mt-5">
-                <button type="button" class="btn btn-outline-primary rounded-pill border-2">Explore Features</button>
+                <a href="Features/index.html"><button type="button" class="btn btn-outline-primary rounded-pill border-2">Explore Features</button></a>
             </div>
         </div>
     </section>
