--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand fw-bold text-white" href="#">
-                <img src="Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp" width="35px" class="d-inline-block align-text-top">
+                <img src="Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp" width="35px"
+                    class="d-inline-block align-text-top">
                 WhatsApp
             </a>
+            <a href="" class="logo-whatsApp"> <img src="Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp"
+                    width="35px" class="d-inline-block align-text-top"></a>
             <button class="navbar-toggler">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#fff" class="bi bi-list"
                     viewBox="0 0 16 16">
@@ -142,7 +145,8 @@
     <section id="explore">
         <div class="container">
             <div class="button-explore text-center mt-5">
-                <a href="Features/index.html"><button type="button" class="btn btn-outline-primary rounded-pill border-2">Explore Features</button></a>
+                <a href="Features/index.html"><button type="button"
+                        class="btn btn-outline-primary rounded-pill border-2">Explore Features</button></a>
             </div>
         </div>
     </section>
