create responsive for logo

--- a/Security/index.html
+++ b/Security/index.html
@@ -32,6 +32,8 @@
                     class="d-inline-block align-text-top">
                 WhatsApp
             </a>
+            <a href="" class="logo-whatsApp"> <img src="../Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp"
+                    width="35px" class="d-inline-block align-text-top"></a>
             <button class="navbar-toggler">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#fff" class="bi bi-list"
                     viewBox="0 0 16 16">
@@ -70,8 +72,13 @@
             <h1 class="fw-bold mt-4">WhatsApp Security</h1>
             <h3 class=" mt-5">Privacy and Security is in our DNA</h3>
             <p class="mt-4">From day one, we built WhatsApp to help you stay in touch with friends, share vital
-                information during <a href="https://www.ndtv.com/tamil-nadu-news/chennai-floods-ndrf-uses-social-media-to-reach-out-to-people-1251104" target="_blank">natural disasters,</a> reconnect with <a href="https://time.com/4272666/refugees-stories-whatsapp/" target="_blank">separated families,</a>
-                or seek a <a href="https://www.buzzfeed.com/rossalynwarren/a-syrian-refugee-used-whatsapp-to-share-his-journey-through" target="_blank">better life.</a> Some of your most personal moments are shared with WhatsApp, which
+                information during <a
+                    href="https://www.ndtv.com/tamil-nadu-news/chennai-floods-ndrf-uses-social-media-to-reach-out-to-people-1251104"
+                    target="_blank">natural disasters,</a> reconnect with <a
+                    href="https://time.com/4272666/refugees-stories-whatsapp/" target="_blank">separated families,</a>
+                or seek a <a
+                    href="https://www.buzzfeed.com/rossalynwarren/a-syrian-refugee-used-whatsapp-to-share-his-journey-through"
+                    target="_blank">better life.</a> Some of your most personal moments are shared with WhatsApp, which
                 is why we built end-to-end encryption into our app. When end-to-end encrypted, your messages, photos,
                 videos, voice messages, documents, and calls are secured from falling into the wrong hands.</p>
 
@@ -124,7 +131,8 @@
                 </div>
                 <div class="col-md-5">
                     <div class="icon-message mt-5">
-                        <img src="../Assets/icon-message-that-stay-with-you.png" alt="icon-message-thath-stay-with-you" width="100%">
+                        <img src="../Assets/icon-message-that-stay-with-you.png" alt="icon-message-thath-stay-with-you"
+                            width="100%">
                     </div>
                     <h5 class="mt-5 fw-bold">Messages that Stay with You</h5>
                     <p class="mt-3">End-to-end encrypted messages are stored on your device and not WhatsApp servers
