add responsive logo for 992px

--- a/Features/index.html
+++ b/Features/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
-    <title>WhatsApp Website</title>
+    <title>WhatsApp Features</title>
 </head>
 
 <body>
@@ -31,6 +31,8 @@
                     class="d-inline-block align-text-top">
                 WhatsApp
             </a>
+            <a href="" class="logo-whatsApp"> <img src="../Assets/icon-wa.png" alt="logo-whatsapp" title="Logo Whatsapp"
+                width="35px" class="d-inline-block align-text-top"></a>
             <button class="navbar-toggler">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#fff" class="bi bi-list"
                     viewBox="0 0 16 16">
