--- a/Features/index.html
+++ b/Features/index.html
@@ -44,7 +44,7 @@
                 <div class="navbar-nav mx-auto">
                     <a class="nav-link me-5 text-white" href="">WHATSAPP WEB</a>
                     <a class="nav-link me-5 text-white" href="#">FEATURES</a>
-                    <a class="nav-link me-5 text-white" href="">DOWNLOAD</a>
+                    <a class="nav-link me-5 text-white" href="../Download/index.html">DOWNLOAD</a>
                     <a class="nav-link me-5 text-white" href="../Security/index.html">SECURITY</a>
                     <a class="nav-link text-white" href="">HELP CENTER</a>
                 </div>
@@ -142,7 +142,7 @@
                         <h3 class="fw-normal">Keep the Conversation Going</h3>
                         <p class="paragraph mt-4">With WhatsApp on the web and desktop, you can seamlessly sync all of
                             your chats to your computer so that you can chat on whatever device is most convenient for
-                            you. <a href="">Download the desktop app</a> or <a href="">visit web.whatsapp.com</a> to get
+                            you. <a href="../Download/index.html">Download the desktop app</a> or <a href="">visit web.whatsapp.com</a> to get
                             started </p>
                         <div class="illustration">
                             <img src="../Assets/whatsapp-phone-connet-to-dekstop.png"
