--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="navbar-nav mx-auto">
                     <a class="nav-link me-5 text-white" href="">WHATSAPP WEB</a>
                     <a class="nav-link me-5 text-white" href="Features/index.html">FEATURES</a>
-                    <a class="nav-link me-5 text-white" href="">DOWNLOAD</a>
+                    <a class="nav-link me-5 text-white" href="Download/index.html">DOWNLOAD</a>
                     <a class="nav-link me-5 text-white" href="Security/index.html">SECURITY</a>
                     <a class="nav-link text-white" href="">HELP CENTER</a>
                 </div>
